--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "css-loader": "^0.26.1",
+    "eslint": "^3.19.0",
     "eslint-config-ok": "github:haoxins/eslint-config",
+    "prop-types": "^15.5.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "style-loader": "^0.13.1",
-    "webpack": "^2.2.1",
-    "prop-types": "^15.5.7"
+    "webpack": "^2.2.1"
   },
   "eslintConfig": {
     "extends": [
