--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "author": "haoxin",
   "license": "MIT",
   "dependencies": {
-    "flatpickr": "^2.3.5"
+    "flatpickr": "^2.3.5",
+    "prop-types": "^15.5.7"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
