--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "react-flatpickr",
-  "version": "3.5.0",
+  "version": "3.5.1",
   "description": "flatpickr for React",
   "main": "build/index.js",
   "scripts": {
     "example": "npm run build && webpack --config example/webpack.js",
     "lint": "eslint lib && eslint example",
     "build": "babel lib --out-dir build",
-    "prepublish": "npm run build",
+    "prepublishOnly": "npm run build",
     "test": "echo todo"
   },
   "repository": "coderhaoxin/react-flatpickr",
