--- a/package.json
+++ b/package.json
@@ -57,11 +57,13 @@
     "eslint": "^4.8.0",
     "eslint-config-ok": "github:haoxins/eslint-config",
     "jest": "^24.8.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "semantic-ui-react": "^0.88.2",
     "style-loader": "^0.19.0",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^3.1.11"
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.3"
   },
   "eslintConfig": {
     "extends": [
