--- a/package.json
+++ b/package.json
@@ -54,17 +54,20 @@
     "css-loader": "^3.6.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
-    "eslint": "^4.8.0",
+    "eslint": "^7.20.0",
     "eslint-config-ok": "github:haoxins/eslint-config",
     "jest": "^24.8.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "semantic-ui-react": "^0.88.2",
     "style-loader": "^0.19.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.3"
   },
+	"peerDependencies": {
+    "react": "^17.0.1"
+	},
   "eslintConfig": {
     "extends": [
       "ok"
