--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
     "eslint": "^7.20.0",
     "eslint-config-ok": "github:haoxins/eslint-config",
     "jest": "^24.8.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "semantic-ui-react": "^0.88.2",
     "style-loader": "^0.19.0",
     "webpack": "^4.41.5",
@@ -66,7 +66,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "peerDependencies": {
-    "react": "^17.0.1"
+    "react": ">=16.0.1, <=18.0.0"
   },
   "eslintConfig": {
     "extends": [
