--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "react-flatpickr",
-  "version": "3.10.13",
+  "version": "4.0.0",
   "description": "flatpickr for React",
-  "main": "build/index.js",
+  "main": "build/react-flatpickr",
+  "module": "build/react-flatpickr.mjs",
+  "exports": {
+    ".": {
+      "import": "./build/react-flatpickr.mjs",
+      "require": "./build/react-flatpickr.js"
+    }
+  },
   "scripts": {
     "example": "npm run build && webpack --config example/webpack.js",
     "dev": "echo 'Please open the example directory to view the example' && webpack-dev-server --config example/webpack.js",
     "lint": "eslint lib && eslint example",
-    "build": "babel lib --out-dir build",
+    "build": "vite build",
     "prepublishOnly": "npm run build",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -19,8 +26,7 @@
     "react"
   ],
   "files": [
-    "build/index.js",
-    "lib/"
+    "build"
   ],
   "author": "haoxin",
   "license": "MIT",
@@ -29,41 +35,28 @@
     "prop-types": "^15.5.10"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.4",
     "@babel/plugin-proposal-decorators": "^7.0.0",
     "@babel/plugin-proposal-do-expressions": "^7.0.0",
     "@babel/plugin-proposal-export-default-from": "^7.0.0",
-    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
     "@babel/plugin-proposal-function-bind": "^7.0.0",
     "@babel/plugin-proposal-function-sent": "^7.0.0",
-    "@babel/plugin-proposal-json-strings": "^7.0.0",
-    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
-    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
     "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
     "@babel/plugin-proposal-throw-expressions": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-syntax-import-meta": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "@vitejs/plugin-react": "^3.1.0",
     "babel-eslint": "^9.0.0",
-    "babel-loader": "^8.0.0",
     "css-loader": "^3.6.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
     "eslint": "^7.20.0",
-    "eslint-config-ok": "github:haoxins/eslint-config",
     "jest": "^24.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "semantic-ui-react": "^0.88.2",
-    "style-loader": "^0.19.0",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.3"
+    "vite": "^4.2.1"
   },
   "peerDependencies": {
     "react": ">=16, <=18"
